swagger tags added to documentation
